<resources>
    <string name="app_name">BD Blood Bank</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="title_activity_all_operation_interface">AllOperationInterface</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="add_donor">Add donor</string>
    <string name="setting">Setting</string>
    <string name="about_me">About me</string>
    <string name="title_activity_controler">Controler</string>
    <string name="settings">Settings</string>
    <string name="m_a_mazedul_islam">M A Mazedul Islam</string>
    <string name="search">Search</string>
    <string name="donar_information">Donar information</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="select_district">Select district</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgotten_password_">Forgotten password?</string>
    <string name="verification_code">Verification Code</string>
    <string name="varification_discription">Please enter the verification code that sent to your mail account</string>
    <string name="verify">Verify</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="a">A+</string>
    <string name="an">A-</string>
    <string name="o">O+</string>
    <string name="on">O-</string>
    <string name="ab">AB+</string>
    <string name="abne">AB-</string>
    <string name="b">B+</string>
    <string name="bne">B-</string>
    <string name="welcome">Welcome</string>
    <string name="remaining">Remaining</string>
    <string name="set_last_donation">Set last donation</string>
    <string name="blood_group">Blood Group :</string>
    <string name="donor_list">Donor List</string>

    <string-array name="district_names">
        <item>Select district</item>
        <item>Nilphamari</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur </item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Cox_s_bazar</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati </item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Jamalpur</item>
        <item>Kishoregonj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Netrakona</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Tangail</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jessore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
        <item>Bogra</item>
        <item>Chapainababganj</item>
        <item>Joypurhat</item>
        <item>Pabna</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
        <item>Habiganj</item>
        <item>Maulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
    </string-array>

    <string-array name="district_names2">
        <item>Select district</item>
        <item>All</item>
        <item>Nilphamari</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram,</item>
        <item>Lalmonirhat</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur </item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Cox_s_bazar</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati </item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Jamalpur</item>
        <item>Kishoregonj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Netrakona</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Tangail</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jessore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
        <item>Bogra</item>
        <item>Chapainababganj</item>
        <item>Joypurhat</item>
        <item>Pabna</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
        <item>Habiganj</item>
        <item>Maulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
    </string-array>

    <string-array name="bloodGroup">
        <item>Select blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>


</resources>
