<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/adminLogin"
            android:icon="@drawable/admin_icon"
            android:title="@string/admin" />
        <item
            android:id="@+id/addDonor"
            android:icon="@drawable/add_donor_icon"
            android:title="@string/add_donor" />
        <item
            android:id="@+id/userSetting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/shareApp"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/aboutMe"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/about_me" />
            <item
                android:id="@+id/userLogout"
                android:icon="@drawable/logout"
                android:title="Logout" />
        </menu>
    </item>


</menu>
